--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "peer": "^1.0.0",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
