--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9"
   },
